# LightingControl

./: .gitignore  README.md  config.yaml.example  config_example.yaml  config_schemas.py  controller.py  deploy.sh  main.py  post_state_to_web_server.py  pyproject.toml  restart_service.sh  service_ctrl.sh  webhook_server.py
.claude/: settings.local.json
src/: __init__.py  config_schemas.py  controller.py  enumerations.py  heartbeat.py  main.py  post_state_to_web_viewer.py  thread_manager.py  webapp.py
static/: styles.css
templates/: index.html
tests/: test_webapp_access_key.py
