[project]
name = "LightingControl"
version = "1.1.0"
description = "Control multiple lights using Shelly smart switches"
readme = "README.md"
requires-python = ">=3.13"
service_name="LightingControl"
launch_path="src/main.py"
dependencies = [
    "astral>=3.2",
    "pytz>=2025.2",
    "sc-foundation-services>=3.0.3",
    "sc-smart-device>=3.0.2",
]

[dev.env.sync]
remote="~/Library/CloudStorage/Dropbox/Development/dev_setup/app_config/LightingControl"
patterns = [
    ".env",
    "config.yaml",
    "system_state.json",
    "logs/*",
    ".vscode/*.json"
]
