[project]
name = "LightingControl"
version = "1.2.1"
description = "Control multiple lights using Shelly smart switches"
readme = "README.md"
requires-python = ">=3.13"
service_name="LightingControl"
launch_path="src/main.py"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "mergedeep>=1.3.4",
    "sc-foundation-services>=3.0.4",
    "sc-smart-device>=3.2.0",
    "uvicorn[standard]>=0.32.0",
]

[dev.env.sync]
remote="~/Library/CloudStorage/Dropbox/Development/dev_setup/app_config/LightingControl"
patterns = [
    ".env",
    "configs/*",
    "system_state.json",
    "logs/*",
    ".vscode/*.json"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
sc-smart-device = { path = "../sc-smart-device", editable = true }
